hello world started

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,6 @@
 [frontend]
 172.31.81.13
 
-
 [backend]
 172.31.81.13
 172.31.90.109
@@ -9,3 +8,6 @@
 [database]
 172.31.81.13
 172.31.90.109
+
+[local]
+localhost
