--- a/02-hello-world.yaml
+++ b/02-hello-world.yaml
@@ -1,7 +1,7 @@
 - name: hello world
   hosts: local
-  connections: local # no need of user name and password
-  tasks: 
-  -name: print hello world
-  ansible.builtin.debug:
-  msg: "hello World"
+  connection: local # no need of username and password
+  tasks:
+  - name: print hello world
+    ansible.builtin.debug:
+      msg: "Hello World"
