--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [frontend]
-172.31.81.13
+172.31.81.13 COURSE=Ansible DURATION=10HR TRAINER=Lakshmisai ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.81.13
