hello world created

--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: print names
     ansible.builtin.debug:
-     msg: "Hello, {{ item }" #item here served keyword
+     msg: "Hello, {{ item }}"  #item here served keyword
     loop:
     - Suresh
     - ramesh
