--- a/18-loops.yaml
+++ b/18-loops.yaml
@@ -1,12 +1,12 @@
-- name: install packages 
+- name: install packages
   hosts: frontend
   become: yes
-  tasks: 
+  tasks:
   - name: install packages
     ansible.builtin.package:
-     name:
-     state: installed
-    loop:"{{ iten }}""
+      name: "{{ item }}"
+      state: installed
+    loop:
     - mysql
     - nginx
     - zip
