--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -2,4 +2,5 @@
   hosts: frontend
   tasks:
   - name: redirect ls output to a file 
-    ansible.builtin.command: "ls -lte > /tmp/output.txt"
+   #ansible.builtin.command: "ls -lte > /tmp/output.txt"
+    ansible.builtin.shell: "ls -lte > /tmp/output.txt"
