--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -9,8 +9,8 @@ hostnames:
   - private-ip-address
 keyed_groups:
 - key: tags.Name #dynamic-frontend
-  prefix: ""
-  separator: ""
+  prefix: "dynamic"
+  separator: "_"
 
 compose:
   # This sets the `ansible_host` variable to connect with the private IP address without changing the hostname.
