--- a/inventory.ini
+++ b/inventory.ini
@@ -1,17 +1,18 @@
 [frontend]
- 54.81.212.166 COURSE=Ansible DURATION=10HR TRAINER=Lakshmisai ansible_user=ec2-user ansible_password=DevOps321
+ 23.22.226.37
+;  COURSE=Ansible DURATION=10HR TRAINER=Lakshmisai ansible_user=ec2-user ansible_password=DevOps321
 
-[backend]
+; [backend]
 
 
-[database]
-54.81.212.166
+; [database]
+; 54.81.212.166
 
-[local]
-localhost
+; [local]
+; localhost
 
-[local:vars]
-COURSE=variables
-TRAINER=Lakshmisai
-DURATION=1.5HR
-GREETING="Hello from Inventory"
+; [local:vars]
+; COURSE=variables
+; TRAINER=Lakshmisai
+; DURATION=1.5HR
+; GREETING="Hello from Inventory"
